CSS and JS linked.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport"
+          content="width=device-width,
+                   initial-scale=1.0"/>
+    <link rel="stylesheet" href="style/css.css">
+    <title>Serhii Samko</title>
 </head>
 <body>
-
+<h1>Serhii Samko</h1>
+<p>
+    This is portfolio project in development stage
+</p>
+<button>
+    <img src="icons/mode.png"
+         width="25px"
+         height="25px"
+         alt="Toggle mode"
+         title="Toggle mode"
+         onclick="toggleMode()">
+</button>
+<script src="app/script.js"></script>
 </body>
 </html>
