--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 <p>
     This is portfolio project in development stage
 </p>
-<button>
-    <img src="icons/mode.png"
-         width="25px"
-         height="25px"
-         alt="Toggle mode"
-         title="Toggle mode"
+<button id="btn-mode">
+    <img id="btn-img"
+         src="icons/mode-dark.png"
+         width="50px"
+         height="50px"
+         alt="White or Dark Mode"
+         title="Dark mode"
          onclick="toggleMode()">
 </button>
 <script src="app/script.js"></script>
