--- a/index.html
+++ b/index.html
@@ -10,19 +10,42 @@
     <title>Serhii Samko</title>
 </head>
 <body>
-<h1>Serhii Samko</h1>
-<p>
-    This is portfolio project in development stage
-</p>
 <button id="btn-mode">
     <img id="btn-img"
-         src="icons/mode-dark.png"
+         src="icons/mode-dark.gif"
          width="50px"
          height="50px"
          alt="White or Dark Mode"
          title="Dark mode"
          onclick="toggleMode()">
 </button>
+<br/>
+<h1>Serhii Samko</h1>
+<img class="my-picture"
+     src="img/serhii.jpeg"
+     width="200"
+>
+<p>
+    This is portfolio project in development stage
+</p>
+<button class="btn">Hard Skills</button>
+<button class="btn">Soft Skills</button>
+<button class="btn">My achievements</button>
+
+<div class="modal hidden">
+    <button class="close-modal">&times;</button>
+    <h1>I'm a modal window 😍</h1>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum.
+    </p>
+</div>
+<div class="overlay hidden"></div>
 <script src="app/script.js"></script>
 </body>
 </html>
