--- a/index.html
+++ b/index.html
@@ -7,19 +7,29 @@
           content="width=device-width,
                    initial-scale=1.0"/>
     <link rel="stylesheet" href="style/css.css">
+    <link rel="stylesheet" href="style/normalize.css">
+    <script src="https://kit.fontawesome.com/17beaeb368.js" crossorigin="anonymous"></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+
     <title>Serhii Samko</title>
 </head>
 <body>
+<main>
 <button id="btn-mode">
     <img id="btn-img"
          src="icons/mode-dark.gif"
-         width="50px"
-         height="50px"
+         width="25px"
+         height="25px"
          alt="White or Dark Mode"
          title="Dark mode"
          onclick="toggleMode()">
 </button>
 <br/>
+<p>&#128076 Hello, I am</p>
 <h1>Serhii Samko</h1>
 <img class="my-picture"
      src="img/serhii.jpeg"
@@ -45,6 +55,7 @@
         mollit anim id est laborum.
     </p>
 </div>
+</main>
 <div class="overlay hidden"></div>
 <script src="app/script.js"></script>
 </body>
