Added images and flex.

--- a/index.html
+++ b/index.html
@@ -13,49 +13,94 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
+          rel="stylesheet">
 
     <title>Serhii Samko</title>
 </head>
 <body>
+<header>
+    <button id="btn-mode">
+        <img id="btn-img"
+             src="icons/mode-dark.gif"
+             width="25px"
+             height="25px"
+             alt="White or Dark Mode"
+             title="Dark mode"
+             onclick="toggleMode()">
+    </button>
+    <br/>
+    <p>&#128076 Hello, I am</p>
+    <h1>Serhii Samko</h1>
+</header>
 <main>
-<button id="btn-mode">
-    <img id="btn-img"
-         src="icons/mode-dark.gif"
-         width="25px"
-         height="25px"
-         alt="White or Dark Mode"
-         title="Dark mode"
-         onclick="toggleMode()">
-</button>
-<br/>
-<p>&#128076 Hello, I am</p>
-<h1>Serhii Samko</h1>
-<img class="my-picture"
-     src="img/serhii.jpeg"
-     width="200"
->
-<p>
-    This is portfolio project in development stage
-</p>
-<button class="btn">Hard Skills</button>
-<button class="btn">Soft Skills</button>
-<button class="btn">My achievements</button>
+    <div class="flex-container">
+        <div>
+            <img class="my-picture"
+                 src="img/serhii.jpeg"
+                 width="200"
+                 alt="Serhii Samko"
+                 title="Serhii web-developer"
+            >
+        </div>
+        <div>
+            <p class="paragraph-info">
+                I'm a junior/trainee software engineer with a technical support background.
+            </p>
+            <button class="btn">Soft Skills</button>
+        </div>
+    </div>
+    <div class="flex-container">
+        <div>
+            <p class="paragraph-info">
+                I'm a junior/trainee software engineer with a technical support background.
+            </p>
+            <button class="btn">Hard Skills</button>
+        </div>
+        <div>
+            <img class="my-picture"
+                 src="img/hard_skills.png"
+                 width="270"
+                 height="260"
+                 alt="Code Joke picture"
+                 title="Code lifestyle picture"
+            >
+        </div>
+    </div>
+    <div class="flex-container">
+        <div>
+            <img class="my-picture"
+                 src="img/achievement.png"
+                 width="200"
+            >
+        </div>
+        <div>
+            <p class="paragraph-info">
+                I'm a junior/trainee software engineer with a technical support background.
+            </p>
+            <button class="btn">My achievements</button>
+        </div>
+    </div>
 
-<div class="modal hidden">
-    <button class="close-modal">&times;</button>
-    <h1>I'm a modal window 😍</h1>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim id est laborum.
-    </p>
-</div>
+    <div class="modal hidden" id="modal-soft">
+        <button class="close-modal">&times;</button>
+        <h1>Soft skills:</h1>
+        <p>
+        <ul>
+            <li>Problem Solving &#129504</li>
+            <li>Critical Thinking &#129488</li>
+            <li>Time management &#9202</li>
+            <li>Agility &#128175</li>
+            <li>Teamwork &#128077</li>
+            <li>Effective communication	&#128172</li>
+            <li>Attention to details &#9997</li>
+        </ul>
+        </p>
+    </div>
 </main>
+<footer>
+    Coded by Serhii Samko and open-sorced
+</footer>
 <div class="overlay hidden"></div>
 <script src="app/script.js"></script>
 </body>
