Added mid solution for modal window.

--- a/index.html
+++ b/index.html
@@ -84,24 +84,12 @@
 
     <div class="modal hidden" id="modal-soft">
         <button class="close-modal">&times;</button>
-        <h1>Soft skills:</h1>
-        <p>
-        <ul>
-            <li>Problem Solving &#129504</li>
-            <li>Critical Thinking &#129488</li>
-            <li>Time management &#9202</li>
-            <li>Agility &#128175</li>
-            <li>Teamwork &#128077</li>
-            <li>Effective communication	&#128172</li>
-            <li>Attention to details &#9997</li>
-        </ul>
-        </p>
     </div>
 </main>
 <footer>
     Coded by Serhii Samko and open-sorced
 </footer>
 <div class="overlay hidden"></div>
-<script src="app/script.js"></script>
+<script type="module" src="app/script.js"></script>
 </body>
 </html>
