--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <p class="paragraph-info">
                 I'm a junior/trainee software engineer with a technical support background.
             </p>
-            <button class="btn">Soft Skills</button>
+            <button class="show-modal" id="softSkills">Soft Skills</button>
         </div>
     </div>
     <div class="flex-container">
@@ -55,7 +55,7 @@
             <p class="paragraph-info">
                 I'm a junior/trainee software engineer with a technical support background.
             </p>
-            <button class="btn">Hard Skills</button>
+            <button class="show-modal" id="hardSkills">Hard Skills</button>
         </div>
         <div>
             <img class="my-picture"
@@ -78,11 +78,11 @@
             <p class="paragraph-info">
                 I'm a junior/trainee software engineer with a technical support background.
             </p>
-            <button class="btn">My achievements</button>
+            <button class="show-modal" id="myAchievements">My achievements</button>
         </div>
     </div>
 
-    <div class="modal hidden" id="modal-soft">
+    <div class="modal hidden" id="">
         <button class="close-modal">&times;</button>
     </div>
 </main>
@@ -90,6 +90,6 @@
     Coded by Serhii Samko and open-sorced
 </footer>
 <div class="overlay hidden"></div>
-<script type="module" src="app/script.js"></script>
+<script src="app/script.js"></script>
 </body>
 </html>
