Main logic done

--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
     </div>
 </main>
 <footer>
-    Coded by Serhii Samko and open-sorced
+    Coded by Serhii Samko and
+    <a href="https://github.com/ssamko0911/ssamko" target="_blank">open-sorced</a>
 </footer>
 <div class="overlay hidden"></div>
 <script src="app/script.js"></script>
