--- a/index.html
+++ b/index.html
@@ -87,7 +87,21 @@
     </div>
 </main>
 <footer>
-    Coded by Serhii Samko and
+    <div class="">
+
+    </div>
+<!--    <div class="social-links d-flex justify-content-center">-->
+<!--        <a href="https://github.com/" target="_blank" title="GitHub profile">-->
+<!--            <i class="fa-brands fa-github-alt"></i>-->
+<!--        </a>-->
+<!--        <a href="https://www.linkedin.com/" target="_blank" title="LinkedIn Profile">-->
+<!--            <i class="fa-brands fa-linkedin"></i>-->
+<!--        </a>-->
+<!--    </div>-->
+    Coded by Serhii Samko
+    <a href="mailto:ssamko091184@gmail.com" class="email-link" title="Email Serhii">
+        ssamko091184@gmail.com</a>
+    and
     <a href="https://github.com/ssamko0911/ssamko" target="_blank">open-sorced</a>
 </footer>
 <div class="overlay hidden"></div>
